--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+
  
  
 }
@@ -18,6 +19,8 @@ input{
   padding: 5px;
   width: 300px;
   height: 20px;
+  margin: 3px;
+
 
 }
 .addbtn{
@@ -25,7 +28,7 @@ input{
   width: 60px;
   height: 35px;
 }
-h2{
+.h2{
   padding: 8px;
   width: 238px;
   height: 20px;
@@ -36,12 +39,20 @@ h2{
 
 
 }
+
+#elemname{
+  font-weight: bold;
+}
+.chlid1{
+  display: flex;
+  flex-direction: column;
+}
 .eachItem{
   display: flex;
 
   justify-content: center;
   align-items: center;
-
+margin: 5px;
  
 }
 .lists{
